Maybe fixed alignment of arrow

--- a/css/styles.css
+++ b/css/styles.css
@@ -123,6 +123,7 @@ h2 {
       padding-right: 10px; }
     .footer .content .center {
       color: #CCC;
+      display: inline;
       text-shadow: 0px 0px 8px #BBB;
       line-height: 1.3;
       width: fit-content;
@@ -143,7 +144,9 @@ h2 {
           font-size: 1.2em; } }
     .footer .content i {
       padding-left: 10px;
-      padding-right: 10px; }
+      padding-right: 10px;
+      line-height: 1.3;
+      vertical-align: middle; }
 
 .parallax {
   width: 100vw;
