--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -40,6 +40,7 @@
                 font-size: 1.2em;
             }
             color: #CCC;
+            display: inline;
             text-shadow: 0px 0px 8px #BBB;
             line-height: 1.3;
             // width: 33%;
@@ -58,6 +59,8 @@
         i {
             padding-left: 10px;
             padding-right: 10px;
+            line-height: 1.3;
+            vertical-align: middle;
         }
     }
 }
